--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,12 @@ body {
     font-family: 'Open Sans Condensed', sans-serif;
     padding:20px 60px;
 }
+
+a{
+    text-decoration:none;
+    color:#000;
+    transition:all 0.3s ease-in-out;
+}
+a:hover{
+    color:#636666;
+}
